--- a/index.html
+++ b/index.html
@@ -16,18 +16,23 @@ family=Montserrat:wght@400;500&display=swap" rel="stylesheet">
 
 
 <body>
-   <!-- Header -->
-    <header class="header-container">
-        <nav>
+        <!-- Header -->
+        <header class="header-container">
+            <nav>
+            
+            <div class="thyca-btn">
+                <a href="https://www.thyca.org/"> <img src="assets/ThyroidCancer Awareness1.jpg" alt="thyca.org"  class="buttonimage"></a> 
+            </div>
+            
             <ul>
-                <li><a href="contactme.html">Contact Me</a></li>
-                <li><a href="aboutme.html">About Me</a></li>
-                <li><a href="skills&certifications.html">Skills & Certifications</a></li>
-                <li><a href="educationandexperience.html">Education & Experience</a></li>              
                 <li><a href="index.html">Home</a></li>
-            </ul>
-        </nav>
-    </header>
+                <li><a href="educationandexperience.html">Education & Experience</a></li>
+                <li><a href="skills&certifications.html">Skills & Certifications</a></li>
+                <li><a href="aboutme.html">About Me</a></li>
+                <li><a href="contactme.html">Contact Me</a></li>  
+                </ul>
+            </nav>
+        </header>
 
     <!-- Main -->
     <main>
