--- a/aboutme.html
+++ b/aboutme.html
@@ -38,13 +38,13 @@ family=Montserrat:wght@400;500&display=swap" rel="stylesheet">
         <main>
             <script src="aboutme.js"></script>
             <div class="main-content">
-                <img id="moms-image" src="assets/madebytonia1.jpg" alt="Under Construction">
+                <img id="moms-image" src="assets/underconstruction.webp" alt="Under Construction">
             </div>
 
                         <!-- Slideshow container -->
-            <div class="slideshow-container">
+            <!-- <div class="slideshow-container"> -->
 
-                <!-- Full-width images with number and caption text -->
+                <!-- Full-width images with number and caption text
                 <div class="mySlides fade">
                 <div class="numbertext">1 / 3</div>
                 <img src="img1.jpg" style="width:100%">
@@ -61,19 +61,40 @@ family=Montserrat:wght@400;500&display=swap" rel="stylesheet">
                 <div class="numbertext">3 / 3</div>
                 <img src="img3.jpg" style="width:100%">
                 <div class="text">Caption Three</div>
-                </div>
+                </div> -->
             
                 <!-- Next and previous buttons -->
-                <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+                <!-- <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
                 <a class="next" onclick="plusSlides(1)">&#10095;</a>
             </div>
-            <br>
+            <br> -->
             
             <!-- The dots/circles -->
-            <div style="text-align:center">
+            <!-- <div style="text-align:center">
                 <span class="dot" onclick="currentSlide(1)"></span>
                 <span class="dot" onclick="currentSlide(2)"></span>
                 <span class="dot" onclick="currentSlide(3)"></span>
-            </div>
+            </div> -->
 
-  </main>
+        </main>
+
+  
+    <!-- Footer -->
+    <footer>
+        <div class="icons-flex">
+            <a href="https://www.facebook.com/howeti">
+                <i class="fa-brands fa-square-facebook icon-2x square"></i>
+            </a>
+            <a href="https://www.linkedin.com/in/tonia-howe-4634692b/">
+                <i class="fa-brands fa-linkedin square"></i>
+            </a>
+            <a href="https://www.instagram.com/tonia_howe/?hl=en">
+                <i class="fa-brands fa-instagram square"></i>
+            </a>
+        </div>
+        <div>
+            Copyright 2023, all rights reserved
+        </div>
+    </footer>
+</body>
+</html>
